<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.AllowsLocation">

    <LinearLayout
        android:id="@+id/llTopBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_gradient"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="@dimen/_50sdp"
        android:paddingBottom="@dimen/_30sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/mainTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_weight="1"
            android:fontFamily="@font/roboto_bold"
            android:gravity="start"
            android:text="@string/allows_location"
            android:textColor="@color/white"
            android:textSize="@dimen/sp18"
            app:textAllCaps="true" />

    </LinearLayout>


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imgGpsLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_map_permition"
        app:layout_constraintBottom_toTopOf="@+id/linearLayoutCompat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/llTopBar" />


    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linearLayoutCompat"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/bg_top_round_50_gradient"
        android:orientation="vertical"
        android:paddingStart="@dimen/_30sdp"
        android:paddingTop="@dimen/_16sdp"
        android:paddingEnd="@dimen/_30sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center"
            android:text="@string/use_your_location"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="@dimen/sp24"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center"
            android:text="@string/use_location_desc_1"
            android:textColor="@color/white"
            android:textSize="@dimen/sp16"
            app:lineHeight="@dimen/_18sdp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center"
            android:text="@string/use_location_desc_2"
            android:textColor="@color/white"
            android:textSize="@dimen/sp16"
            app:lineHeight="@dimen/_18sdp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtNotNow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_25sdp"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center"
            android:text="@string/not_now"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="@dimen/sp18"
            android:textStyle="bold" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btnAllow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_40sdp"
            android:background="@drawable/bg_white_full"
            android:elevation="@dimen/_20sdp"
            android:fontFamily="@font/roboto_bold"
            android:gravity="center"
            android:padding="@dimen/_12sdp"
            android:text="@string/allow"
            android:textAllCaps="true"
            android:textColor="@color/darkTextColor"
            android:textSize="@dimen/sp18" />


    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>