<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.ReportFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_gradient"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="@dimen/_40sdp"
        android:paddingBottom="@dimen/_10sdp">


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/mainTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_weight="1"
            android:fontFamily="@font/roboto_bold"
            android:gravity="start"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="@dimen/_16sdp"
            app:textAllCaps="true" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgSetting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:src="@drawable/ic_settings_svg" />


    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:paddingBottom="@dimen/_55sdp"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                app:cardBackgroundColor="@color/grayF2"
                app:cardCornerRadius="@dimen/_5sdp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_10sdp"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="start"
                            android:layout_weight="1"
                            android:gravity="start"
                            android:orientation="vertical">

                            <androidx.appcompat.widget.AppCompatTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="start"
                                android:fontFamily="@font/roboto_bold"
                                android:gravity="start"
                                android:text="@string/my_progress"
                                android:textColor="@color/darkTextColor"
                                android:textSize="@dimen/_14sdp" />

                            <androidx.appcompat.widget.AppCompatTextView
                                android:id="@+id/tvTotalDistance"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="start"
                                android:fontFamily="@font/oswald_regular"
                                android:gravity="start"
                                android:text="@string/_00_00"
                                android:textColor="@color/darkTextColor"
                                android:textSize="@dimen/_28sdp" />

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content">
                            <androidx.appcompat.widget.AppCompatTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="start"
                                android:fontFamily="@font/roboto_bold"
                                android:gravity="start"
                                android:text="@string/total"
                                android:textAllCaps="true"
                                android:textColor="@color/txtGrayDark"
                                android:textSize="@dimen/_12sdp" />

                            <androidx.appcompat.widget.AppCompatTextView
                                android:id="@+id/tvDistanceUnit"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="start"
                                android:layout_marginStart="@dimen/_2sdp"
                                android:fontFamily="@font/roboto_bold"
                                android:gravity="start"
                                android:text="@string/km"
                                android:textAllCaps="true"
                                android:textColor="@color/txtGrayDark"
                                android:textSize="@dimen/_12sdp" />
                            </LinearLayout>

                        </LinearLayout>

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_run_tracker_logo"
                            android:tint="@color/startColor"
                            />


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_10sdp"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_10sdp"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <androidx.appcompat.widget.AppCompatTextView
                                android:id="@+id/tvTotalTime"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="start"
                                android:fontFamily="@font/oswald_regular"
                                android:gravity="center"
                                android:text="@string/_0"
                                android:textColor="@color/darkTextColor"
                                android:textSize="@dimen/_28sdp" />

                            <androidx.appcompat.widget.AppCompatTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="start"
                                android:fontFamily="@font/roboto_bold"
                                android:gravity="center"
                                android:text="@string/total_hours"
                                android:textAllCaps="true"
                                android:textColor="@color/txtGrayDark"
                                android:textSize="@dimen/_10sdp" />


                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <androidx.appcompat.widget.AppCompatTextView
                                android:id="@+id/tvTotalCal"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:fontFamily="@font/oswald_regular"
                                android:gravity="start"
                                android:text="@string/_0"
                                android:textColor="@color/darkTextColor"
                                android:textSize="@dimen/_28sdp" />

                            <androidx.appcompat.widget.AppCompatTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:fontFamily="@font/roboto_bold"
                                android:gravity="start"
                                android:text="@string/total_calories"
                                android:textAllCaps="true"
                                android:textColor="@color/txtGrayDark"
                                android:textSize="@dimen/_10sdp" />


                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <androidx.appcompat.widget.AppCompatTextView
                                android:id="@+id/tvAvgSpeed"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:fontFamily="@font/oswald_regular"
                                android:gravity="start"
                                android:text="@string/_0"
                                android:textColor="@color/darkTextColor"
                                android:textSize="@dimen/_28sdp" />

                            <androidx.appcompat.widget.AppCompatTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:fontFamily="@font/roboto_bold"
                                android:gravity="start"
                                android:text="@string/avg_pace"
                                android:textAllCaps="true"
                                android:textColor="@color/txtGrayDark"
                                android:textSize="@dimen/_10sdp" />


                        </LinearLayout>


                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/llSeeMore"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_gradient"
                        android:orientation="horizontal">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:layout_marginStart="@dimen/_20sdp"
                            android:fontFamily="@font/roboto_bold"
                            android:gravity="center"
                            android:text="@string/see_more"
                            android:textAllCaps="true"
                            android:textColor="@color/white"
                            android:textSize="@dimen/_12sdp" />

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="@dimen/_25sdp"
                            android:layout_height="@dimen/_25sdp"
                            android:layout_gravity="center"
                            android:src="@drawable/ic_baseline_navigate_next_24"
                            app:tint="@color/white" />


                    </LinearLayout>
                </LinearLayout>


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_60sdp"
                android:layout_marginTop="@dimen/_10sdp"
                app:cardBackgroundColor="@color/grayF2"
                app:cardCornerRadius="@dimen/_5sdp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10sdp"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:fontFamily="@font/roboto_bold"
                        android:gravity="start"
                        android:text="@string/statistics"
                        android:textColor="@color/darkTextColor"
                        android:textSize="@dimen/_14sdp" />


                    <com.google.android.material.tabs.TabLayout
                        android:id="@+id/tabLayout"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:layout_marginBottom="@dimen/_10sdp"
                        android:background="@drawable/tab_indicator"
                        app:tabGravity="fill"
                        app:tabIndicator="@drawable/seleted_tab_indicator"
                        app:tabIndicatorAnimationMode="elastic"
                        app:tabIndicatorColor="@null"
                        app:tabIndicatorGravity="stretch"
                        app:tabMode="fixed"
                        app:tabSelectedTextColor="@color/onlyWhite" />

                    <androidx.viewpager.widget.ViewPager
                        android:id="@+id/viewpager"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_280sdp" />

                    <LinearLayout
                        android:id="@+id/llMainHeightTop"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_20sdp"
                        android:background="@drawable/seleted_tab_indicator"
                        android:backgroundTint="@color/txtGrayChoice"
                        android:orientation="horizontal">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/txtDistance"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:background="@drawable/selected_tab_view"
                            android:fontFamily="@font/roboto_bold"
                            android:gravity="center"
                            android:paddingHorizontal="@dimen/_10sdp"
                            android:paddingVertical="@dimen/_10sdp"
                            android:text="@string/distance"
                            android:textColor="@color/onlyWhite"
                            android:textSize="@dimen/_12sdp" />


                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/txtDuration"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:fontFamily="@font/roboto_bold"
                            android:gravity="center"
                            android:paddingHorizontal="@dimen/_10sdp"
                            android:paddingVertical="@dimen/_10sdp"
                            android:text="@string/duration"
                            android:textColor="@color/txtGrayDark"
                            android:textSize="@dimen/_12sdp" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/txtKcal"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:fontFamily="@font/roboto_bold"
                            android:gravity="center"
                            android:paddingHorizontal="@dimen/_10sdp"
                            android:paddingVertical="@dimen/_10sdp"
                            android:text="@string/kcal"
                            android:textColor="@color/txtGrayDark"
                            android:textSize="@dimen/_12sdp" />


                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>